0.08
 - Update README file.

0.07 2015-01-25T01:21:51+01:00
 - Add <?xml> header to XML document.
 - Add lines to XML document.
 - Add Map::Tube::Budapest to SEE ALSO section in doc.
 - Add Map::Tube::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Nanjing to SEE ALSO section in doc.
 - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Vienna to SEE ALSO section in doc.
 - Add Task::Map::Tube to SEE ALSO section in doc.
 - Add get_lines() method to doc.
 - Add get_stations() method to doc.
 - Improve EXAMPLE3 section in doc.
 - Rename images/Prague.png to images/ex3.png.
 - Update copyright years to 2015.

0.06 2014-12-22T01:16:24+01:00
 - Fix examples/ex3.pl example.
 - Move image in doc to github. MetaCPAN doesn't view local images.

0.05 2014-12-21T17:35:53+01:00
 - Add EXAMPLE3 section to doc.
 - Add Map::Tube::Dnipropetrovsk, Map::Tube::Novosibirsk,
   Map::Tube::SaintPetersburg, Map::Tube::Tbilisi and
   Map::Tube::Yekaterinburg to SEE ALSO section in doc.
 - Add Map::Tube::GraphViz and Map::Tube::Text::Table to SEE ALSO section
   in doc.
 - Remove executable bit from prague-map.xml file.
 - Remove obsolete utf8 pragma from EXAMPLE2 section in doc.

0.04 2014-12-12T08:17:01+01:00
 - Add Map::Tube::Bucharest, Map::Tube::Kazan, Map::Tube::Kharkiv and
   Map::Tube::Samara to SEE ALSO section in doc.
 - Add Map::Tube::Berlin and Map::Tube::Moscow to SEE ALSO section in doc.
 - Add Map::Tube::Kiev and Map::Tube::Minsk to SEE ALSO section in doc.
 - Add get_all_routes() method from Map::Tube 2.30 api.
 - Add metro name.
 - Describe get_all_routes() method as EXPERIMENTAL.
 - Fix REPOSITORY section in doc.
 - Fix get_shortest_route() method description in doc.
 - Fix map (bad edge between Jinonice and Nové Butovice).
 - Improve abstract to readable version.

0.03 2014-12-03T07:59:33+01:00
 - Add Map::Tube::NYC and Map::Tube::Sofia to SEE ALSO section in doc.
 - Add Map::Tube::Warsaw to SEE ALSO section in doc.